syntax = "proto3";

package blockjoy.api.ui_v1;

import "google/protobuf/timestamp.proto";

/* API token representation
 * As there's no specific token type, we use this one to indicate the value of
 * the field will be an API token
 */
message ApiToken {
  string value = 1;
}

/*
 * Pagination information, used in the response type
 */
message Pagination {
  /* Optional total number of items, may not be bigger than
   * PAGINATION_MAX_COUNT
   */
  optional int32 total_items = 1;
  int32 current_page = 2;
  int32 items_per_page = 3;
}

/* General request metadata */
message RequestMeta {
  /* Request ID. Should be generated when constructing the request */
  optional string id = 1;
  /* The user issuing this request, identified by it's API token */
  optional ApiToken token = 2;
  /* Optionally pass in an array of field names expected to be returned. */
  repeated string fields = 3;
  /* Optionally pass in pagination */
  optional Pagination pagination = 5;
}

/* General response metadata */
message ResponseMeta {
  /* Response status codes */
  enum Status {
    reserved 3 to 15;

    STATUS_UNSPECIFIED = 0;
    STATUS_SUCCESS = 1;
    STATUS_GENERALERROR = 2;
  }

  /* Response status code */
  Status status = 1;
  /* Request ID which generated this response */
  string origin_request_id = 2;
  /* Optional array of additional messages */
  repeated string messages = 3;
  /* Optional pagination information */
  optional Pagination pagination = 4;
  /* Updated user token, if needed */
  optional ApiToken token = 5;
}

message Host {
  /* Possible states the container is described with */
  enum HostStatus {
    // Reserving values up to 15 for possible later use
    // Up to 15 to ensure only 1 byte is used for the most common values
    reserved 12 to 15;

    HOST_STATUS_UNSPECIFIED = 0;
    HOST_STATUS_CREATING = 1;
    HOST_STATUS_RUNNING = 2;
    HOST_STATUS_STARTING = 3;
    HOST_STATUS_STOPPING = 4;
    HOST_STATUS_STOPPED = 5;
    HOST_STATUS_UPGRADING = 6;
    HOST_STATUS_UPGRADED = 7;
    HOST_STATUS_DELETING = 8;
    HOST_STATUS_DELETED = 9;
    HOST_STATUS_INSTALLING = 10;
    HOST_STATUS_SNAPSHOTTING = 11;
  }

  // This is the id of the host.
  string id = 1;
  // This is the randomly generated name of the host.
  string name = 2;
  // The version of the blockjoy control software running on the host.
  optional string version = 3;
  // The physical location of the server.
  optional string location = 4;
  // The number of logical cores the machine has.
  optional uint64 cpu_count = 5;
  // The amount of physical memory the machine has in megabytes.
  optional uint64 mem_size = 6;
  // The size of the physical disks the machine has, in gigabytes.
  optional uint64 disk_size = 7;
  // The operating system running on the machine, i.e. "BSD" or "Linux".
  optional string os = 8;
  // The version of said operating system running on the host.
  optional string os_version = 9;
  // The ip address on which the machine is reachable.
  string ip = 10;
  // Current status of the machine, or `UNSPECIFIED`.
  HostStatus status = 11;
  // All the nodes running on this machine.
  repeated Node nodes = 12;
  // The moment this host was created. Corresponds to the moment that the
  // host_provision was 
  google.protobuf.Timestamp created_at = 13;
  // The lowest ip address that this host may assign to a node.
  optional string ip_range_from = 14;
  // The highest ip address that this host may assign to a node.
  optional string ip_range_to = 15;
  // The ip gateway of this host.
  optional string ip_gateway = 16;
}

/* HostProvision entity */
message HostProvision {
  optional string id = 1;
  optional string host_id = 2;
  optional google.protobuf.Timestamp created_at = 3;
  optional google.protobuf.Timestamp claimed_at = 4;
  optional string install_cmd = 5;
  string ip_range_from = 6;
  string ip_range_to = 7;
  string ip_gateway = 8;
  optional string org_id = 9;
}

/* Blockchain node representation */
message Node {
  /**
   * Describe the node's chain related status
   * Generic, NOT chain specific states. These states are used to describe the
   * node's states as seen by the blockchain
   */
  enum NodeStatus {
    NODE_STATUS_UNSPECIFIED = 0;
    // General chain states
    NODE_STATUS_PROVISIONING = 1;
    NODE_STATUS_BROADCASTING = 2;
    NODE_STATUS_CANCELLED = 3;
    NODE_STATUS_DELEGATING = 4;
    NODE_STATUS_DELINQUENT = 5;
    NODE_STATUS_DISABLED = 6;
    NODE_STATUS_EARNING = 7;
    NODE_STATUS_ELECTING = 8;
    NODE_STATUS_ELECTED = 9;
    NODE_STATUS_EXPORTED = 10;
    NODE_STATUS_INGESTING = 11;
    NODE_STATUS_MINING = 12;
    NODE_STATUS_MINTING = 13;
    NODE_STATUS_PROCESSING = 14;
    NODE_STATUS_RELAYING = 15;
    NODE_STATUS_REMOVED = 16;
    NODE_STATUS_REMOVING = 17;
  }

  // Describe the node's syncing status
  enum SyncStatus {
    // Reserving values up to 15 for possible later use
    // Up to 15 to ensure only 1 byte is used for the most common values
    reserved 3 to 15;

    SYNC_STATUS_UNSPECIFIED = 0;
    SYNC_STATUS_SYNCING = 1;
    SYNC_STATUS_SYNCED = 2;
  }

  // Describe the node's staking status
  enum StakingStatus {
    // Reserving values up to 15 for possible later use
    // Up to 15 to ensure only 1 byte is used for the most common values
    reserved 7 to 15;

    STAKING_STATUS_UNSPECIFIED = 0;
    STAKING_STATUS_FOLLOWER = 1;
    STAKING_STATUS_STAKED = 2;
    STAKING_STATUS_STAKING = 3;
    STAKING_STATUS_VALIDATING = 4;
    STAKING_STATUS_CONSENSUS = 5;
    STAKING_STATUS_UNSTAKED = 6;
  }

  enum NodeType {
    NODE_TYPE_UNSPECIFIED = 0;
    NODE_TYPE_MINER = 1;
    NODE_TYPE_ETL = 2;
    NODE_TYPE_VALIDATOR = 3;
    NODE_TYPE_API = 4;
    NODE_TYPE_ORACLE = 5;
    NODE_TYPE_RELAY = 6;
    NODE_TYPE_EXECUTION = 7;
    NODE_TYPE_BEACON = 8;
    NODE_TYPE_MEVBOOST = 9;
    NODE_TYPE_NODE = 10;
    NODE_TYPE_FULLNODE = 11;
    NODE_TYPE_LIGHTNODE = 12;
  }

  message NodeProperty {
    string name = 1;
    string label = 2;
    string description = 3;
    string ui_type = 4;
    bool disabled = 5;
    bool required = 6;
    optional string value = 7;
  }

  string id = 1;
  string org_id = 2;
  string host_id = 3;
  string host_name = 4;
  string blockchain_id = 5;
  string name = 6;
  // The P2P address of the node on the blockchain. This field is only set as
  // the node is started, so therefore it is optional.
  optional string address = 7;
  optional string version = 8;
  optional string ip = 9;
  NodeType type = 10;
  repeated NodeProperty properties = 11;
  optional int64 block_height = 13;
  google.protobuf.Timestamp created_at = 15;
  google.protobuf.Timestamp updated_at = 16;
  NodeStatus status = 17;
  SyncStatus sync_status = 18;
  optional StakingStatus staking_status = 19;
  string ip_gateway = 20;
  bool self_update = 21;
  string network = 22;
  optional string blockchain_name = 23;
  // The id of the user that created this node. For the earliest nodes we
  // created, this field was not tracked and is therefore not populated.
  optional string created_by = 24;
  // The name of the aforementioned user.
  optional string created_by_name = 25;
  // The email of said aforementioned user.
  optional string created_by_email = 26;
}

// A node scheduler controls the way that the node is placed onto an appropriate
// host. There are two fields, each representing a possible method of selecting
// a host for this node to be scheduled on. They are sorted by priority, meaning
// that `similarity` takes precedence over `resource`. The final field is
// required, in order to make sure that the way we schedule a node is always
// defined.
message NodeScheduler {
  // Controls whether or not nodes of a similar type will be placed on the same
  // host or, conversely, be spread out over many hosts. "Similar" is defined
  // here as having the name `node_type`, `blockchain_id` and `org_id`. Note
  // that `version` is ignored here, so that we don't interfere with clustering
  // during when some of the nodes are upgraded, but others aren't yet.
  enum SimilarNodeAffinity {
    SIMILARY_NODE_AFFINITY_UNSPECIFIED = 0;
    // Schedule nodes similar on the same host machine. This is useful for nodes
    // that form groups with heavy intercommunication. Placing them on the same
    // host machine will ensure the lowest possible network latency between
    // them.
    SIMILARY_NODE_AFFINITY_CLUSTER = 1;
    // Avoid scheduling nodes on hosts that already have a similar node running
    // on them. This is useful when multiple nodes are ran in parallel for the
    // sake of redundancy. Spreading the nodes ensures that one host going down
    // does not compromise other nodes.
    SIMILARY_NODE_AFFINITY_SPREAD = 2;
  }

  // Controls whether nodes will prefer to be scheduled on the most utilized or
  // the least utilized hosts first. This allows you to do breadth- or depth-
  // first utilization of the available hosts.
  enum ResourceAffinity {
    RESOURCE_AFFINITY_UNSPECIFIED = 0;
    // Prefer to utilize full hosts first.
    RESOURCE_AFFINITY_MOST_RESOURCES = 1;
    // Prefer to utilize empty hosts first.
    RESOURCE_AFFINITY_LEAST_RESOURCES = 2;
  }

  // The UUID of the scheduler.
  string id = 1;
  // The way we want the node to react to similar nodes being on a host.
  optional SimilarNodeAffinity similarity = 2;
  // The way we want the node to react to hosts being full or empty.
  ResourceAffinity resource = 3;
}

message OrgUser {
  enum OrgRole {
    ORG_ROLE_UNSPECIFIED = 0;
    ORG_ROLE_MEMBER = 1;
    ORG_ROLE_OWNER = 2;
    ORG_ROLE_ADMIN = 3;
  }

  string user_id = 1;
  string org_id = 2;
  OrgRole role = 3;
}

/* Organization representation */
message Organization {
  // The UUID of a the organization.
  string id = 1;
  // The name of this organization.
  string name = 2;
  // If this field is set to true, this organization is a personal
  // organization. A personal organization is the default organzation for a
  // user that contains only them.
  bool personal = 3;
  // The number of users in this organization.
  uint64 member_count = 4;
  // The moment which this organization was created.
  google.protobuf.Timestamp created_at = 13;
  // The moment which this organization was last updated.
  google.protobuf.Timestamp updated_at = 14;
  // This field contains the `OrgRole` that the user has within this
  // organization, which controls the level of permissions they have to perform
  // mutations (i.e. kick other users).
  optional OrgUser current_user = 15;
}

/* User representation */
message User {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

/* Bill representation */
message Bill {
  optional string id = 1;
  optional google.protobuf.Timestamp created_at = 2;
  optional string tax_number = 3;
  optional string receiver_name = 4;
  optional string receiver_address = 5;
  optional float tax_rate = 6;
  optional float net_amount = 7;
  optional float gross_amount = 8;
  optional string pdf_url = 9;
}

/* Single metric value */
message Metric {
  enum Name {
    NAME_UNSPECIFIED = 0;
    NAME_NODES = 1;
    NAME_HOSTS = 2;
    NAME_ONLINE = 3;
    NAME_OFFLINE = 4;
  }

  Name name = 1;
  string value = 2;
}

/* UI configuration */
message UserConfigurationParameter {
  string name = 1;
  string value = 2;
}

/* Generic parameter key/value pair */
message Parameter {
  string name = 1;
  string value = 2;
}

message BlockchainNetwork {
  enum NetworkType {
    NETWORK_TYPE_UNSPECIFIED = 0;
    NETWORK_TYPE_DEV = 1;
    NETWORK_TYPE_TEST = 2;
    NETWORK_TYPE_MAIN = 3;
  }

  string name = 1;
  string url = 2;
  NetworkType net_type = 3;
}

message Blockchain {
  enum BlockchainStatus {
    BLOCKCHAIN_STATUS_UNSPECIFIED = 0;
    BLOCKCHAIN_STATUS_DEVELOPMENT = 1;
    BLOCKCHAIN_STATUS_ALPHA = 2;
    BLOCKCHAIN_STATUS_BETA = 3;
    BLOCKCHAIN_STATUS_PRODUCTION = 4;
    BLOCKCHAIN_STATUS_DELETED = 5;
  }

  optional string id = 1;
  optional string name = 2;
  optional string description = 3;
  BlockchainStatus status = 4;
  optional string project_url = 5;
  optional string repo_url = 6;
  optional string version = 7;
  optional google.protobuf.Timestamp created_at = 8;
  optional google.protobuf.Timestamp updated_at = 9;
  bool supports_etl = 10;
  bool supports_node = 11;
  bool supports_staking = 12;
  bool supports_broadcast = 13;
  string supported_nodes_types = 14;
  repeated BlockchainNetwork networks = 15;
}

/* User invitation */
message Invitation {
  optional string id = 1;
  optional string created_by_id = 2;
  optional string created_for_org_id = 3;
  optional string invitee_email = 4;
  optional google.protobuf.Timestamp created_at = 5;
  optional google.protobuf.Timestamp accepted_at = 6;
  optional google.protobuf.Timestamp declined_at = 7;
  optional string created_by_user_name = 8;
  optional string created_for_org_name = 9;
}
